--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -63,6 +63,7 @@
                 android:layout_marginLeft="26dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="26dp"
+                android:textSize="16sp"
                 android:hint="@string/username_hint"
                 android:inputType="text"
                 android:paddingBottom="16dp"
@@ -78,6 +79,7 @@
                 android:layout_marginLeft="26dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="26dp"
+                android:textSize="16sp"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingBottom="16dp"
@@ -93,6 +95,7 @@
                 android:layout_marginLeft="26dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="26dp"
+                android:textSize="16sp"
                 android:hint="@string/phone"
                 android:inputType="phone"
                 android:paddingBottom="16dp"
@@ -178,6 +181,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_weight="1"
+                    android:textSize="16sp"
                     android:drawableEnd="@mipmap/ic_arrow_dropdown"
                     android:drawableRight="@mipmap/ic_arrow_dropdown"
                     android:hint="@string/blood"
@@ -194,6 +198,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_weight="1"
+                    android:textSize="16sp"
                     android:drawableEnd="@mipmap/ic_arrow_dropdown"
                     android:drawableRight="@mipmap/ic_arrow_dropdown"
                     android:hint="@string/reshus"
@@ -212,6 +217,7 @@
                 android:layout_below="@id/dropdown"
                 android:layout_marginLeft="26dp"
                 android:layout_marginTop="8dp"
+                android:textSize="16sp"
                 android:layout_marginRight="26dp"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
@@ -230,6 +236,7 @@
                 android:layout_marginRight="26dp"
                 android:hint="@string/re_password"
                 android:inputType="textPassword"
+                android:textSize="16sp"
                 android:paddingBottom="16dp"
                 android:textColor="@color/edit_Text"
                 android:theme="@style/RegisterEditText"
@@ -303,6 +310,7 @@
                 android:layout_below="@id/role"
                 android:layout_marginLeft="26dp"
                 android:layout_marginTop="8dp"
+                android:textSize="16sp"
                 android:layout_marginRight="26dp"
                 android:drawableEnd="@mipmap/ic_arrow_dropdown"
                 android:drawableRight="@mipmap/ic_arrow_dropdown"
@@ -319,6 +327,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editTextJob"
                 android:layout_marginLeft="26dp"
+                android:textSize="16sp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="26dp"
                 android:hint="@string/home_address"
@@ -340,6 +349,7 @@
                 android:drawableRight="@mipmap/ic_blood_needed_location"
                 android:hint="@string/location"
                 android:inputType="text"
+                android:textSize="16sp"
                 android:paddingBottom="16dp"
                 android:textColor="@color/edit_Text"
                 android:theme="@style/RegisterEditText"
@@ -366,7 +376,7 @@
                 android:layout_toRightOf="@id/checkbox"
                 android:text="@string/term"
                 android:textColor="@color/edit_Text"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/btnRegister"
@@ -375,7 +385,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/checkbox"
                 android:layout_marginLeft="26dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginRight="26dp"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/button_register"
